Avoid wrap on flag column

--- a/java/com.sap.sailing.gwt.ui/src/main/java/com/sap/sailing/gwt/regattaoverview/client/RegattaRaceStatesTable.css
+++ b/java/com.sap.sailing.gwt.ui/src/main/java/com/sap/sailing/gwt/regattaoverview/client/RegattaRaceStatesTable.css
@@ -45,7 +45,8 @@
 .cellTableEvenRowCell {
 	border: none;
 	border-bottom: 1px solid #dedede;
-	padding: 20px 5px;
+	padding: 20px 5px 20px 10px;
+	vertical-align: top;
 	
 }
 
@@ -56,7 +57,8 @@
 .cellTableOddRowCell {
 	border: none;
 	border-bottom: 1px solid #dedede;
-	padding: 20px 5px;
+	padding: 20px 5px 20px 10px;
+	vertical-align: top;
 
 }
 
